# cmake-example

./: CMakeLists.txt  README.md
a/: CMakeLists.txt  src.cpp
a/priv/: impl.h
b/: CMakeLists.txt  src.cpp
b/include/: b.h
test/: CMakeLists.txt  src1.cpp  src2.cpp
